@startuml erd-identity
title Entity Relationships — Identity (Draft v1, ready-to-migrate)

entity "users" as user {
  * id : bigint <<PK>>
  --
  * email : string <<unique>>
  * password_digest : string
  full_name : string
  phone : string
  dni_or_cuit : string <<unique when present>>
  verified_at : datetime
  * created_at : datetime
  * updated_at : datetime
}

entity "carriers" as carrier {
  * id : bigint <<PK>>
  --
  * user_id : bigint <<FK,unique>>
  legal_name : string
  base_city : string
  province : string
  rating_avg : decimal(3,2) = 0.0
  completed_shipments : integer = 0
  * created_at : datetime
  * updated_at : datetime
}

entity "shippers" as shipper {
  * id : bigint <<PK>>
  --
  * user_id : bigint <<FK,unique>>
  company_name : string
  tax_id : string <<unique when present>>
  billing_address : string
  * created_at : datetime
  * updated_at : datetime
}

entity "vehicles" as vehicle {
  * id : bigint <<PK>>
  --
  * carrier_id : bigint <<FK>>
  * plate : string <<unique>>
  * capacity_kg : integer
  * vehicle_type : string [van, truck_small, truck_large, semi_trailer]
  gps_enabled : boolean = false
  * created_at : datetime
  * updated_at : datetime
}

user ||--o| carrier : "0..1 — present iff carrier profile exists"
user ||--o| shipper : "0..1 — present iff shipper profile exists"
carrier ||--o{ vehicle : "owns"

note bottom
  Role state is derived from the carriers / shippers relation rows — there
  are NO denormalised boolean flags on `users`. Convenience access via
  scopes (User.carriers, User.shippers) and predicates (user.carrier?,
  user.shipper?). See ADR-008 and docs/02-high-level-design/domain-model.md
  § 2.1.

  AdminUser (ActiveAdmin / Devise — see INF-BE-00003) lives in a SEPARATE
  table (admin_users). Domain users have no 'admin' role; admin staff
  do not have Carrier or Shipper profiles. See ADR-008 and
  docs/02-high-level-design/domain-model.md § 2.5.
end note

@enduml
